spacing correction

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -12,7 +12,7 @@
 
 .nav-tabs {
   border-bottom-color: $gray-300;
-  padding: $spacer * 3;
+  padding: $spacer * 2;
   padding-bottom: 0;
   .nav-item {
     margin-right: $spacer;
